# VisionSetil

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile.cpu  MEMORY.md  OBJECT  PROMPT.md  R  README.md  VISION.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cline/: mcp_settings.example.json  mcp_settings.json
app/: config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/: README.md  requirements.txt
data/: gbif_probe_latest.json  species_fe_export.json  training_sources_registry.json
docs/: AUDIT_SECURITY_PERF_2026-07-23.md  DATA_SOURCES_SPAIN_SORIA.md  DESIGN_REDESIGN_v0.3.0.md  KAGGLE_FIX_PROMPT.md  LOOP_ENGINEERING_2M_PLAN.md  MEGA_PLAN_PROFESSIONAL_UPGRADE.md  MEGA_PROMPT.md  ML_IMPROVEMENT_PROMPT.md  ML_WEIGHTS_RUNBOOK.md  OPEN_SET_CALIBRATION_NOTES.md  PHASE_B_HONEST_IDENTIFY.md  PHASE_C_MEDIA_SEASON_BEAUTY.md  PHASE_D_30D_FEATURES_AND_BEAUTY.md  PHASE_E_QUALITY_AUTHZ.md  PLAN_30D_MODELO_INDUSTRIAL.md  QUALITY_GATE.md  ROADMAP.md  SAFETY_POLICY.md  SECURITY_S4_CHECKLIST.md  SETADLE_MEGA_PLAN.md  SPRINT_PLAN_NEXT.md  SPRINT_PLAN_v0.3.0.md  TECHNICAL.md  UNIFIED_APP.md  WEB_PRODUCT_BAR.md  architecture.md  chinese_reference_patterns.md  configuration.md  dataset_strategy.md  deployment_notes.md  evaluation_strategy.md  fungi_metadata_schema.md  human_review_workflow.md  kaggle_benchmark.md  kaggle_execution_guide.md  large_public_dataset_benchmark.md  model_architecture.md  model_metrics_report.md  open_set_rejection.md  product_spec.md  (+4 more)
eval/: README.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
kaggle/: MEGA_TRAINING_NOTES.md  README.md  __init__.py  anti_leak_splitter.py  build_exp_v12_notebook.py  build_exp_v13_deadly.py  build_exp_v14_focused.py  build_exp_v15_focus40.py  build_exp_v15b_focus40.py  foundation_ensemble.py  fungiclef25-starter-notebook.ipynb  gen_notebook.py  gen_notebook_v10.py  gen_notebook_v11.py  gen_notebook_v5.py  gen_notebook_v6.py  gen_notebook_v7.py  gen_notebook_v8.py  industrial_losses.py  inspect_kaggle_dataset.py  kaggle_run_config.example.json  kernel-metadata-exp-v12.json  kernel-metadata.json  mega_training.py  mega_training_v5.py  multi_view_model.py  prepare_kaggle_dataset.py  run_kaggle_benchmark.py  run_large_dataset_benchmark.py  vision_setil_kaggle_benchmark.ipynb  visionsetil_exp_v12_data_scale.ipynb  visionsetil_exp_v13_deadly.ipynb  visionsetil_exp_v14_focused.ipynb  visionsetil_exp_v15_focus40.ipynb  visionsetil_exp_v15b_focus40.ipynb  visionsetil_mega_training.ipynb
kaggle_dataset_export/: README.md  dataset-metadata.json  real_observations.json
scripts/: audit_media.py  augment_dataset.py  build_industrial_dataset.py  build_season_pack.py  build_species_catalog.py  build_species_index.py  build_species_index_join.py  build_species_photos.py  build_taxonomy_db.py  compare_ml_loops.py  (+27 more)
(+470 files in other folders)
